# modi

./: .claude.json  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  TASKS.md  justfile  pyproject.toml
.claude/: README.md  mcp.json
.claude/agents/: code-reviewer.md
.claude/commands/: bug-fix.md  documentation.md  feature.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: README.md  api-reference.md  best-practices.md  core-concepts.md  getting-started.md  index.md  overview.md  troubleshooting.md
docs/integrations/: fastapi.md  faststream.md  flask.md  simple-apps.md
examples/: README.md  advanced_example.py  fastapi_example.py  framework_integration.py  simple_test.py
issues/: 001-conditional-providers.md  002-add-fastapi-integration-example.md  004-fix-circular-dependency-detection.md
src/modi/: __init__.py  container.py  decorators.py
src/modi/di/: application.py
tests/: __init__.py  test_modi.py
